Fix Bug : Global: Usage & Content guidelines spacing --> Usage & Content guidelines link

--- a/src/document.scss
+++ b/src/document.scss
@@ -230,6 +230,9 @@ a {
   width: 388px;
   height: 160px;
 }
+.docs-guideline-group {
+  margin-bottom: 32px;
+}
 .docs-mt32 {
   margin-top: 32px;
 }
